<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.sunshine.weatherapp.DisplayingData.WeatherUtility" />
        <variable
            name="weatherEntry"
            type="com.example.sunshine.weatherapp.storingData.WeatherEntry" />


    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/list_item_date_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            app:setdate="@{weatherEntry.date}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="TOMMOROW" />

        <TextView
            android:id="@+id/list_item_date2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed"
            app:setdate="@{weatherEntry.date}"
            android:textColor="#646464"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/list_item_date_textview"
            app:layout_constraintTop_toTopOf="@+id/list_item_date_textview"
            tools:text="June 18" />


        <TextView
            android:id="@+id/list_item_high_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="192dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="96sp"
            app:Temp="@{weatherEntry.maxTemp}"
            android:contentDescription="@{String.valueOf(weatherEntry.maxTemp)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/list_item_date_textview"
            tools:text="21" />

        <TextView
            android:id="@+id/list_item_low_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="129dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="48sp"
            app:Temp="@{weatherEntry.minTemp}"
            android:contentDescription="@{String.valueOf(weatherEntry.minTemp)}"
            app:layout_constraintStart_toStartOf="@+id/list_item_high_textview"
            app:layout_constraintTop_toTopOf="@+id/list_item_high_textview"
            tools:text="18" />


        <ImageView
            android:id="@+id/list_item_icon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@{weatherEntry.description}"
            app:layout_constraintStart_toEndOf="@+id/list_item_high_textview"
            app:layout_constraintTop_toTopOf="@+id/list_item_high_textview"
            app:setImage="@{weatherEntry.code}"
            tools:src="@drawable/a13" />

        <TextView
            android:id="@+id/list_item_forecast_textview"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="160dp"
            android:text="@{weatherEntry.description}"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#646464"
            app:layout_constraintStart_toStartOf="@+id/list_item_icon"
            app:layout_constraintTop_toTopOf="@+id/list_item_icon"
            tools:text="Clear" />


        <TextView
            android:id="@+id/Humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="@+id/list_item_low_textview"
            app:layout_constraintTop_toTopOf="@+id/list_item_low_textview"
            tools:text="@string/humidity" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="@+id/Humidity"
            app:layout_constraintTop_toBottomOf="@+id/Humidity"
            app:windDirection="@{weatherEntry.windDirection}"
            app:windSpeed="@{weatherEntry.windSpeed}"
            tools:text="@string/format_wind_imperial" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/wind"
            app:layout_constraintTop_toBottomOf="@+id/wind"
            tools:text="@string/pressure" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
